# Arnold

./: .gitattributes  .gitignore  .gitmodules  README.md  pyproject.toml
cfg/: config.yaml
cfg/env/: kinesis.yaml
cfg/learning/: arnold.yaml
cfg/run/: train.yaml
downloads/Kinesis_assets/: README.md  kit_test_motion_dict.pkl  kit_train_motion_dict.pkl
downloads/Kinesis_assets/initial_pose/: initial_pose_test.pkl  initial_pose_train.pkl
scripts/: install.sh  setup_experts.sh
src/arnold/: learning_utils.py  logger.py  memory.py  obc_trainer.py  observation_parser.py  train_arnold.py  wandb_logger.py
src/arnold/experts/: README.md  kinesis_wrapper.py
src/arnold/torch_model/: normalization.py  sensorimotor_vocabulary.py  sensory_encoder.py  transformer_policy.py
